--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Do You know Ankita?</title>
+    <title>Do You know Ankitaa?</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>🎀 Do You Know Ankita? 🎀</h1>
+        <h1>🎀 Do You Know Ankitaa? 🎀</h1>
         <div id="quiz-box">
             <p id="question">Loading...</p>
             <div id="options"></div>
@@ -18,3 +18,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
