--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Do You know Ankitaa?</title>
+    <title>umm You know Ankitaa?</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,4 +18,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
