--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>umm You know Ankitaa?</title>
+    <title>Do You Know Ankita?</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>🎀 Do You Know Ankitaa? 🎀</h1>
+        <h1>🎀 Do You Know Ankita? 🎀</h1>
         <div id="quiz-box">
             <p id="question">Loading...</p>
             <div id="options"></div>
+            <p id="feedback"></p> <!-- NEW: feedback display -->
             <button id="next-btn">Next</button>
         </div>
         <p id="result"></p>
@@ -18,5 +19,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
